--- a/outline.sty
+++ b/outline.sty
@@ -6,6 +6,7 @@
 \usepackage{adjustbox}
 \usepackage{tikz}
 \usepackage{array}
+\usepackage{ragged2e}
 
 \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
