Added amsfonts package

--- a/outline.sty
+++ b/outline.sty
@@ -2,6 +2,7 @@
 
 \usepackage{amsthm}
 \usepackage{amsmath}
+\usepackage{amsfonts}
 \usepackage{dirtytalk}
 \usepackage{adjustbox}
 \usepackage{tikz}
