--- a/outline.sty
+++ b/outline.sty
@@ -8,6 +8,8 @@
 \usepackage{tikz}
 \usepackage{array}
 \usepackage{ragged2e}
+\usepackage{multicol}
+\usepackage{amssymb}
 
 \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
