--- a/outline.sty
+++ b/outline.sty
@@ -1,15 +1,26 @@
 \ProvidesPackage{outline}
 
+% Math packages
 \usepackage{amsthm}
 \usepackage{amsmath}
 \usepackage{amsfonts}
+\usepackage{amssymb}
+
 \usepackage{dirtytalk}
 \usepackage{adjustbox}
 \usepackage{tikz}
 \usepackage{array}
 \usepackage{ragged2e}
 \usepackage{multicol}
-\usepackage{amssymb}
+\usepackage{hyperref}
+\usepackage{color}
+
+\hypersetup{
+    colorlinks,
+    allcolors=black,
+    linktoc=all,
+    breaklinks=true,
+}
 
 \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
@@ -19,6 +30,7 @@
 	\date{#1}
 	\author{\textit{#2}}
 	\title{\textbf{#3}}
+
 }
 
 \newenvironment{itemize-dense}
